// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table render Check invalid data: invalid data 1`] = `
<div
  class="cr-table-container"
>
  <div
    class="cr-table-header__content cr-table-header__content-empty"
  />
  <table
    class="cr-table"
  >
    <tbody
      class="cr-table__body"
    >
      <tr
        class=""
      >
        <td>
          Price
        </td>
        <td>
          Time
        </td>
        <td>
          Volume
        </td>
      </tr>
      <tr
        class=""
      >
        <td>
          0
        </td>
        <td>
          12:20
        </td>
        <td>
          12
        </td>
        <td>
          fake
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="cr-table-background"
  />
</div>
`;

exports[`Table render Snapshot 1`] = `
<div
  class="cr-table-container"
>
  <div
    class="cr-table-header__content cr-table-header__content-empty"
  />
  <table
    class="cr-table"
  >
    <thead
      class="cr-table__head"
    >
      <tr
        class="cr-table__head-row"
      >
        <th>
          Price
        </th>
        <th>
          Type
        </th>
        <th>
          Volume
        </th>
      </tr>
    </thead>
    <tbody
      class="cr-table__body"
    >
      <tr
        class=""
      >
        <td>
          0
        </td>
        <td>
          Sell
        </td>
        <td>
          0.1
        </td>
      </tr>
      <tr
        class=""
      >
        <td>
          0
        </td>
        <td>
          Buy
        </td>
        <td>
          0.1
        </td>
      </tr>
      <tr
        class=""
      >
        <td>
          0
        </td>
        <td>
          Buy
        </td>
        <td>
          0.1
        </td>
      </tr>
      <tr
        class=""
      >
        <td>
          0
        </td>
        <td>
          Sell
        </td>
        <td>
          0.1
        </td>
      </tr>
      <tr
        class=""
      >
        <td>
          0
        </td>
        <td>
          Buy
        </td>
        <td>
          0.1
        </td>
      </tr>
      <tr
        class=""
      >
        <td>
          0
        </td>
        <td>
          Sell
        </td>
        <td>
          0.1
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="cr-table-background"
  />
</div>
`;
